--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "name": "UkGeoTool",
    "version": "0.1.0",
    "description": "Simple package which provides methods to convert between lat/long and easting/northings",
-   "author": "David Bamber <dbamber@gmail.com>"
+   "author": "David Bamber <dbamber@gmail.com>",
    "keywords": [
        "package",
        "example" 
@@ -27,14 +27,13 @@
    },
    "licenses": [
        {
-           "type": "GPLv2",
-           "url": "http://www.example.org/licenses/gpl.html" 
+           "type": "GPLv2"
        } 
    ],
    "repositories": [
        {
            "type": "git",
-           "url": "http://need.to.fix" 
+           "url": "https://dbamber@github.com/dbamber/UkGeoTool.git" 
        } 
    ],
    "dependencies": {
